main/default/objects/Opportunity_Product__c/Opportunity_Product__c.object-meta.xml
<CustomObject>
    <label>Opportunity Product</label>
    <nameField>
        <displayFormat>OP-{0000000}</displayFormat>
        <label>Opportunity Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunity Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>