main/default/objects/Opportunity_Product__c/fields/Application_Specialist_Upsell__c.field-meta.xml
<CustomField>
    <fullName>Application_Specialist_Upsell__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ITS Upsell</label>
    <type>Checkbox</type>
</CustomField>