main/default/objects/Opportunity_Product__c/fields/CPE_Amount__c.field-meta.xml
<CustomField>
    <fullName>CPE_Amount__c</fullName>
    <label>CPE Amount - NRO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>