main/default/objects/Opportunity_Product__c/fields/Estimated_NAA_for_Roll_Up__c.field-meta.xml
<CustomField>
    <fullName>Estimated_NAA_for_Roll_Up__c</fullName>
    <label>Estimated NAA for Roll Up</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>