main/default/objects/Opportunity_Product__c/fields/Is_CPE_Product__c.field-meta.xml
<CustomField>
    <fullName>Is_CPE_Product__c</fullName>
    <formula>CASE(Sales_Product__c, 
&quot;PBX Services AMAC&quot;,1, 
&quot;PBX Services MAC&quot;,1, 
&quot;PBX Services New&quot;,1,
&quot;UC Equipment&quot;,1, 
&quot;NRO Professional Services&quot;,1,
0) = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is CPE Product</label>
    <type>Checkbox</type>
</CustomField>