main/default/objects/Opportunity_Product__c/fields/MRC_without_Turndown__c.field-meta.xml
<CustomField>
    <fullName>MRC_without_Turndown__c</fullName>
    <formula>IF(CONTAINS(RecordType.Name, &#39;Turndown&#39;), 0, MRC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MRC without Turndown</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>