main/default/objects/Opportunity_Product__c/fields/Opportunity_Product_Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Product_Sales_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Product Sales Product</label>
    <referenceTo>Opportunity_Product_Sales_Product__c</referenceTo>
    <relationshipLabel>Opportunity Products</relationshipLabel>
    <relationshipName>Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>