main/default/objects/Opportunity_Product__c/fields/Primary_Service_Location__c.field-meta.xml
<CustomField>
    <fullName>Primary_Service_Location__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Service Location</label>
    <referenceTo>Service_Location__c</referenceTo>
    <relationshipLabel>Opportunity Products</relationshipLabel>
    <relationshipName>Opportunity_Products</relationshipName>
    <type>Lookup</type>
</CustomField>