main/default/objects/Opportunity_Product__c/fields/Requires_Bandwidth__c.field-meta.xml
<CustomField>
    <fullName>Requires_Bandwidth__c</fullName>
    <formula>CASE(Sales_Product__c,
&quot;Cloud Firewall Service&quot;,1,
&quot;Dark Fiber&quot;,1,
&quot;Longhaul Wavelength&quot;,1,
&quot;Metro Wavelength&quot;,1,
&quot;Private Line Longhaul&quot;,1, 
&quot;Private Line MAN&quot;,1,
0) = 1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Requires Bandwidth</label>
    <type>Checkbox</type>
</CustomField>