main/default/objects/Opportunity_Product__c/fields/Sales_Product__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product__c</fullName>
    <label>Sales Product</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Access Service</fullName>
            </value>
            <value>
                <fullName>Basic Voice Services</fullName>
            </value>
            <value>
                <fullName>Broadband/DSL</fullName>
            </value>
            <value>
                <fullName>Cloud Connect</fullName>
            </value>
            <value>
                <fullName>Cloud Firewall Service</fullName>
            </value>
            <value>
                <fullName>Collaboration &amp; Messaging</fullName>
            </value>
            <value>
                <fullName>Colocation Services</fullName>
            </value>
            <value>
                <fullName>Conference Now</fullName>
            </value>
            <value>
                <fullName>CPE MRR</fullName>
            </value>
            <value>
                <fullName>Dedicated Internet</fullName>
            </value>
            <value>
                <fullName>DSL and/or Broadband</fullName>
            </value>
            <value>
                <fullName>Ethernet Services - E-LAN</fullName>
            </value>
            <value>
                <fullName>Ethernet Services - E-LINE Host Site</fullName>
            </value>
            <value>
                <fullName>Ethernet Services - E-LINE Remote Site</fullName>
            </value>
            <value>
                <fullName>Failover – Dedicated Internet</fullName>
            </value>
            <value>
                <fullName>Failover – VPN Solutions</fullName>
            </value>
            <value>
                <fullName>Hosted &amp; Managed PBX</fullName>
            </value>
            <value>
                <fullName>Hosted Voice Services</fullName>
            </value>
            <value>
                <fullName>ISDN/PRI</fullName>
            </value>
            <value>
                <fullName>ISP Services</fullName>
            </value>
            <value>
                <fullName>Legacy Voice or Integrated T1</fullName>
            </value>
            <value>
                <fullName>Long Distance</fullName>
            </value>
            <value>
                <fullName>Managed Prime/Pro</fullName>
            </value>
            <value>
                <fullName>Managed UC</fullName>
            </value>
            <value>
                <fullName>NAA</fullName>
            </value>
            <value>
                <fullName>Need A Product</fullName>
            </value>
            <value>
                <fullName>Network Security Suite</fullName>
            </value>
            <value>
                <fullName>Network Solutions</fullName>
            </value>
            <value>
                <fullName>NGN SIP Trunking</fullName>
            </value>
            <value>
                <fullName>Novus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>