main/default/objects/Opportunity_Product__c/fields/Sales_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Sales_Product_Id__c</fullName>
    <formula>Opportunity_Product_Sales_Product__r.Sales_Product__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Product Id</label>
    <type>Text</type>
</CustomField>