main/default/objects/Opportunity_Product__c/fields/SE_Upsell__c.field-meta.xml
<CustomField>
    <fullName>SE_Upsell__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this product is the result of a Sales Engineer upsell, box will be checked.</description>
    <inlineHelpText>Check the box if the addition of this product is the result of a Sales Engineer Upsell.</inlineHelpText>
    <label>SE Upsell?</label>
    <type>Checkbox</type>
</CustomField>