main/default/objects/Opportunity_Product__c/fields/SPC_Product_Id__c.field-meta.xml
<CustomField>
    <fullName>SPC_Product_Id__c</fullName>
    <formula>Opportunity_Product_Sales_Product__r.SPC_Product__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SPC_Product_Id</label>
    <type>Text</type>
</CustomField>