main/default/objects/Opportunity_Product__c/recordTypes/ITS_CPE.recordType-meta.xml
<RecordType>
    <fullName>ITS_CPE</fullName>
    <active>true</active>
    <description>One time CPE Purchase will always be configured manually to fill in the CPE Amount on the Opportunity</description>
    <label>Manual Entry-ITS CPE</label>
</RecordType>