main/default/objects/Opportunity_Product__c/recordTypes/Manual_Entry.recordType-meta.xml
<RecordType>
    <fullName>Manual_Entry</fullName>
    <active>true</active>
    <description>Configured manually instead of through CPQ</description>
    <label>Manual Entry</label>
</RecordType>