main/default/objects/Opportunity_Product__c/recordTypes/Manual_Turndown.recordType-meta.xml
<RecordType>
    <fullName>Manual_Turndown</fullName>
    <active>true</active>
    <description>Disconnect (Turndown) Products</description>
    <label>Manual Turndown/Writedown</label>
</RecordType>