main/default/objects/Opportunity_Product__c/validationRules/Non_Wholesale_Opps_Require_Location.validationRule-meta.xml
<ValidationRule>
    <fullName>Non_Wholesale_Opps_Require_Location</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(Opportunity__r.RecordType.Name = &quot;Wholesale&quot;),ISBLANK(Primary_Service_Location__c))
&amp;&amp; NOT($Setup.Validation_Rule_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
    <errorMessage>A service location is required to save this opportunity product.</errorMessage>
</ValidationRule>