main/default/objects/Opportunity_Product__c/validationRules/Requires_Bandwidth.validationRule-meta.xml
<ValidationRule>
    <fullName>Requires_Bandwidth</fullName>
    <active>true</active>
    <description>Selected product for manual opp product requires bandwidth selection</description>
    <errorConditionFormula>AND 
( 
Requires_Bandwidth__c,
ISPICKVAL(Bandwidth__c,&quot;&quot;),
RecordType.DeveloperName = &quot;Manual_Entry&quot;,
OR(DATEVALUE(CreatedDate) &gt;= Date(2016,3,17), ISNEW())
)
&amp;&amp; NOT($Setup.Validation_Rule_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
    <errorDisplayField>Bandwidth__c</errorDisplayField>
    <errorMessage>The sales product selected requires a bandwidth selection.</errorMessage>
</ValidationRule>