main/default/objects/Opportunity_Product__c/validationRules/UC_Specialist_Requird.validationRule-meta.xml
<ValidationRule>
    <fullName>UC_Specialist_Requird</fullName>
    <active>true</active>
    <description>UC Specialist is required UC products are chosen in CPQ or manual opp product.</description>
    <errorConditionFormula>AND(ISBLANK(Opportunity__r.UC_Specialist__c), 
 OR(AND(NOT(ISBLANK(CPE_Amount__c )), CPE_Amount__c &gt; 0), 
   CONTAINS(TEXT(Sales_Product__c), &#39;UC&#39;)
 ) 
)
&amp;&amp; NOT($Setup.Validation_Rule_Settings__c.Disable_Validation_Rules__c)</errorConditionFormula>
    <errorMessage>UC Specialist is required if NRO / CPE amount is populated or if UC products are chosen.</errorMessage>
</ValidationRule>