main/default/objects/Opportunity_Product__c/listViews/Opp_Product_with_Solution.listView-meta.xml
<ListView>
    <fullName>Opp_Product_with_Solution</fullName>
    <columns>NAME</columns>
    <columns>Solution__c</columns>
    <columns>Sales_Product__c</columns>
    <columns>MRC__c</columns>
    <columns>Active__c</columns>
    <columns>OBJECT_ID</columns>
    <columns>Sales_Product_Id__c</columns>
    <columns>SPC_Product_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Primary_Service_Location__c</field>
        <operation>equals</operation>
        <value>BTG INTERNATIONAL CANADA</value>
    </filters>
    <label>Opp Product with Solution</label>
</ListView>